force-app/main/default/objects/energy_audit__c/energy_audit__c.object-meta.xml
<CustomObject>
    <label>energy audit</label>
    <nameField>
        <label>energy audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>energy audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>