force-app/main/default/objects/energy_audit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>energy audits</relationshipLabel>
    <relationshipName>energy_audits</relationshipName>
    <type>Lookup</type>
</CustomField>