force-app/main/default/objects/energy_audit__c/fields/annual_energy_usage_kwh__c.field-meta.xml
<CustomField>
    <fullName>annual_energy_usage_kwh__c</fullName>
    <inlineHelpText>usage per square foot</inlineHelpText>
    <label>annual energy usage(kwh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>