force-app/main/default/objects/energy_audit__c/fields/audit_notes__c.field-meta.xml
<CustomField>
    <fullName>audit_notes__c</fullName>
    <label>audit notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>