force-app/main/default/objects/energy_audit__c/fields/average_annual_electric_cost__c.field-meta.xml
<CustomField>
    <fullName>average_annual_electric_cost__c</fullName>
    <inlineHelpText>annual cost per square foot</inlineHelpText>
    <label>average annual electric cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>