force-app/main/default/objects/energy_audit__c/fields/Type_of_installation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_installation__c</fullName>
    <label>Type of installation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>rooftop</fullName>
            </value>
            <value>
                <fullName>carport</fullName>
            </value>
            <value>
                <fullName>groundmounted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>